syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.applicationservice.grpc";
option csharp_namespace = "Server.Grpc";

import "user_service.proto";
import "job_service.proto";

// A service operating on Application resources.
service JobApplicationService {
  // A method to create a new application  for a given job 
  rpc CreateJobApplication(CreateJobApplicationRequest) returns (JobApplicationProto);
}

// A representation of a Application.
message JobApplicationProto {
  // The application identifier
  int64 id = 1;
  // The status of the application, e.g., Pending, Approved, Rejected
  string status = 4;
  // The date when the application was submitted
  string applicationDate = 5;
  // The job applied for
  int64 jobId = 3;
  // The job seeker who applied
  int64 jobSeekerId = 2;
}

// A request to be sent when calling the CreateApplication method.
message CreateJobApplicationRequest {

  // The Application  that is applied to
  JobApplicationProto jobApplication = 1;
}

