syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.project.jobservice.grpc";
option csharp_namespace = "Server.Grpc";

// A representation of an `User` resource.
message UserProto {
  // The user identifier. Auto generated by DB when created.
  int64 id = 1;
  // The user email, it is considered to be unique.
  string email = 2;
  // The user password.
  string password = 3;
  // The user role, must be one of `JobProvider`, `JobSeeker`.
  string role = 4;

  // Pass the corresponding one based on the provided role.
  oneof user_type {
    // If the user role is `JobProvider`, job provider details.
    JobProviderProto jobProvider = 5;
    // If the user role is `JobSeeker`, job seeker details..
    JobSeekerProto jobSeeker = 6;
  }
}

// A representation of a `JobProvider` resource.
message JobProviderProto {
  // The job provider name.
  string name = 1;
  // The job provider description.
  string description = 2;
  // The job provider phone number.
  string phoneNumber = 3;
}

// A representation of a `JobSeeker` resource.
message JobSeekerProto {
  // The job seeker first name.
  string firstName = 1;
  // The job seeker last name.
  string lastName = 2;
  // The job seeker phone number.
  string phoneNumber = 3;
  // The job seeker resume.
  string resume = 4;
}
